# ixmp_workflow_utils

./: .gitignore  README.md  setup.cfg  setup.py
ixmp_workflow_utils/: __init__.py  aggregation.py  timeseries.py
ixmp_workflow_utils/tests/: sample_allowed_scenarios.yaml  sample_timeseries.csv  sample_variable_config.yaml  test_timeseries.py
ixmp_workflow_utils/tests/region_mapping/: model.yaml
