[metadata]
VCS = git
name = ixmp_workflow_utils
author = IIASA Energy Program
style = pep440-pre
author_email = kushin@iiasa.ac.at
license = Apache

[options]
packages = ixmp_workflow_utils
zip_safe = True
include_package_data = True
install_requires =
    pandas >= 1.0
    pyyaml
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    pytest >= 5

[aliases]
test=pytest
